<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="2">
        <TextView
            android:id="@+id/profile_p_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/EnterPlayerName"/>
        <EditText
            android:id="@+id/profile_edit_p_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="2">

        <TextView
            android:id="@+id/profile_char_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/EnterCharName"/>
        <EditText
            android:id="@+id/profile_edit_char_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="2">
        <TextView
            android:id="@+id/profile_eye_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/EnterEyeColor"/>
        <EditText
            android:id="@+id/profile_edit_eye_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <TextView
            android:id="@+id/profile_hair_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/EnterHairColor"/>
        <EditText
            android:id="@+id/profile_edit_hair_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="2">
        <TextView
            android:id="@+id/profile_height"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/EnterHeight"/>
        <EditText
            android:id="@+id/profile_edit_height"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <TextView
            android:id="@+id/profile_weight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/EnterWeight"/>
        <EditText
            android:id="@+id/profile_edit_weight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="2">

        <Button
            android:id="@+id/update_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/ProfileConfirm"
            android:textSize="30sp" />
    </LinearLayout>
</LinearLayout>